--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ default-*.json
 gen/
 node_modules/
 target/
-
+resources/
 # Web IDE, App Studio
 .che/
 .gen/
@@ -17,7 +17,7 @@ target/
 *_mta_build_tmp
 *.mtar
 mta_archives/
-
+resources/
 # Other
 .DS_Store
 *.orig
